# rustack

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  setup.sh  tailwind.config.js
conf/: default.toml
src/: errors.rs  lib.rs  mailer.rs  main.rs  markdown.rs  settings.rs
src/actors/: mailer.rs  mod.rs
src/controllers/: mod.rs
src/models/: mod.rs
src/views/: mod.rs
static/css/: main.min.css
templates/: base.html  errors.html  head.handlebars  index.handlebars  index.html
