[package]
name = "rustack"
version = "0.1.0"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.4.1"
actix-service = "1.0.6"
actix-session = "0.4.0"
actix-web = "3.3.2"
cached = "0.22.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
colored = "2.0.0"
comrak = "0.9.0"
config = "0.10.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.8"
lettre = "0.9.5"
lettre_email = "0.9.4"
log = "0.4.11"
r2d2 = "0.8.9"
rand = "0.7.3"
regex = "1.4.2"
rust-argon2 = "0.8.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
sitewriter = "0.2.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
validator = { version = "0.12.0", features = ["derive"] }
