[package]
name = "rustack"
version = "1.0.0"
authors = ["~author~"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-files = "0.6.0-beta.3"
actix-service = "2.0.0-beta.5"
actix-session = "0.4.1"
actix-web = "4.0.0-beta.4"
cached = "0.23.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
comrak = "0.10.0"
config = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
lettre = "0.10.0-beta.3"
tracing = "0.1.25"
rand = "0.8.3"
regex = "1.4.5"
rust-argon2 = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sitewriter = "0.3.2"
validator = { version = "0.13.0", features = ["derive"] }
askama = "0.10.5"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-actix-rustls", "macros", "migrate", "uuid", "chrono" ] }
thiserror = "1.0.24"
derive_more = "0.99.13"
